package ch.etmles.payroll.Department;

import ch.etmles.payroll.Department.Department;
import org.springframework.data.jpa.repository.JpaRepository;

public interface DepartmentRepository extends JpaRepository<Department, Long>{

}
